# software_design_by_example

./: .gitignore  pyproject.toml  website_site.url
find_duplicate_files/: find_duplicate_files.py
objects_classes/: class_objects_with_dicts.py
pattern_matching/: glob_any.py  glob_charset.py  glob_either.py  glob_literal.py  glob_not.py  glob_null.py  glob_one_or_more.py  glob_range.py  pattern_matching.py  test_glob_any.py  test_glob_char_set.py  test_glob_either.py  test_glob_lit.py  test_glob_not.py  test_glob_one_or_more.py  test_glob_range.py
