[project]
name = "software-design-by-example"
version = "0.1.0"
description = ""
authors = [
    {name = "rijojohn85",email = "rijojohn85@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
